package Decor_R;

import javafx.scene.layout.Pane;

public class ChristmasTreeImpl implements ChristmasTree{
    @Override
    public void draw(Pane pane) {

    }
}
