@startuml

title __TASK_10_USHAKOVA's Class Diagram__\n

  namespace Decor_R {
    class Decor_R.Activities_R {
    }
  }
  

  namespace Decor_R {
    interface Decor_R.ChristmasTree {
    }
  }
  

  namespace Decor_R {
    class Decor_R.ChristmasTreeImpl {
    }
  }
  

  namespace Decor_R {
    class Decor_R.Event_R {
    }
  }
  

  namespace Decor_R {
    class Decor_R.Gateways_R {
    }
  }
  

  namespace Decor_R {
    abstract class Decor_R.TreeDecorator {
    }
  }
  

  namespace Decor_R {
    class Decor_R.Tree_R {
    }
  }
  

  namespace sample {
    class sample.Controller {
    }
  }
  

  namespace sample {
    class sample.Main {
    }
  }
  

  Decor_R.Activities_R -up-|> Decor_R.TreeDecorator
  Decor_R.ChristmasTreeImpl .up.|> Decor_R.ChristmasTree
  Decor_R.Event_R -up-|> Decor_R.TreeDecorator
  Decor_R.Gateways_R -up-|> Decor_R.TreeDecorator
  Decor_R.TreeDecorator .up.|> Decor_R.ChristmasTree
  Decor_R.TreeDecorator o-- Decor_R.ChristmasTree : tree
  Decor_R.Tree_R -up-|> Decor_R.TreeDecorator
  sample.Controller .up.|> javafx.fxml.Initializable
  sample.Main -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
